build_errors_ssfr.txt
warning: unused import: `std::sync::Arc`
 --> astraweave-fluids\src\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `shader`
  --> astraweave-fluids\src\sdf.rs:22:13
   |
22 |         let shader = device.create_shader_module(wgpu::ShaderModuleDescriptor {
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_shader`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `config_buffer`
  --> astraweave-fluids\src\sdf.rs:27:13
   |
27 |         let config_buffer = device.create_buffer_init(&wgpu::util::BufferInitDescriptor {
   |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_config_buffer`

warning: unused variable: `jfa_params_buffer`
  --> astraweave-fluids\src\sdf.rs:33:13
   |
33 |         let jfa_params_buffer = device.create_buffer(&wgpu::BufferDescriptor {
   |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jfa_params_buffer`

warning: unused variable: `texture_a`
  --> astraweave-fluids\src\sdf.rs:55:13
   |
55 |         let texture_a = device.create_texture(&texture_desc);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_a`

warning: unused variable: `texture_b`
  --> astraweave-fluids\src\sdf.rs:56:13
   |
56 |         let texture_b = device.create_texture(&texture_desc);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_b`

warning: multiple fields are never read
  --> astraweave-fluids\src\sdf.rs:4:5
   |
3  | pub struct SdfSystem {
   |            --------- fields in this struct
4  |     init_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^
5  |     step_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^
6  |     finalize_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^^^^^
7  |
8  |     config_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^
9  |     jfa_params_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^^^^^
...
14 |     bind_group_a: wgpu::BindGroup,
   |     ^^^^^^^^^^^^
15 |     bind_group_b: wgpu::BindGroup,
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `astraweave-fluids` (lib) generated 7 warnings (run `cargo fix --lib -p astraweave-fluids` to apply 1 suggestion)
    Checking fluids_demo v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\fluids_demo)
error[E0252]: the name `FluidSystem` is defined multiple times
  --> examples\fluids_demo\src\main.rs:20:40
   |
1  | use astraweave_fluids::FluidSystem;
   |     ------------------------------ previous import of the type `FluidSystem` here
...
20 | use astraweave_fluids::{FluidRenderer, FluidSystem};
   |                                        ^^^^^^^^^^^ `FluidSystem` reimported here
   |
   = note: `FluidSystem` must be defined only once in the type namespace of this module

error[E0405]: cannot find trait `FluidScenario` in this scope
  --> examples\fluids_demo\src\scenarios\laboratory.rs:17:6
   |
17 | impl FluidScenario for LaboratoryScenario {
   |      ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
1  + use crate::scenarios::FluidScenario;
   |

error[E0412]: cannot find type `OceanRenderer` in this scope
 --> examples\fluids_demo\src\scenarios\ocean.rs:7:15
  |
7 |     renderer: OceanRenderer,
  |               ^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use crate::ocean_renderer::OceanRenderer;
  |

error[E0433]: failed to resolve: use of undeclared type `OceanRenderer`
  --> examples\fluids_demo\src\scenarios\ocean.rs:14:23
   |
14 |             renderer: OceanRenderer::new(device, queue, format),
   |                       ^^^^^^^^^^^^^ use of undeclared type `OceanRenderer`
   |
help: consider importing this struct
   |
1  + use crate::ocean_renderer::OceanRenderer;
   |

error[E0405]: cannot find trait `FluidScenario` in this scope
  --> examples\fluids_demo\src\scenarios\ocean.rs:20:6
   |
20 | impl FluidScenario for OceanScenario {
   |      ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
1  + use crate::scenarios::FluidScenario;
   |

warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\ocean.rs:4:12
  |
4 | use glam::{Mat4, Vec3};
  |            ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `FluidSystem`
  --> examples\fluids_demo\src\main.rs:20:40
   |
20 | use astraweave_fluids::{FluidRenderer, FluidSystem};
   |                                        ^^^^^^^^^^^

Some errors have detailed explanations: E0252, E0405, E0412, E0433.
For more information about an error, try `rustc --explain E0252`.
warning: `fluids_demo` (bin "fluids_demo") generated 2 warnings
error: could not compile `fluids_demo` (bin "fluids_demo") due to 5 previous errors; 2 warnings emitted
